# trendify-f1

./: .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  AUDITORIA_SYNAPSE.md  CLAUDE.md  CODEX.md  README.md  README_MVS_DROPi_STEP1.md  REQUIREMENTS_NOTE.txt  _meta_me_check.py  cloudbuild.yaml  conftest.py  learning_loop.py  pyproject.toml  pytest.ini  repo_snapshot_learning.txt  sitecustomize.py  synapse_app.html  synapse_console.html
.audit/: branch.txt  commit.txt  doctor.txt  pytest.txt  status.txt  utcnow.txt
.githooks/: pre-push
buyer/: __init__.py  buyer_block.py  catalog_normalizer.py  cli.py  decision_logger_adapter.py  schemas.py  scoring_rules.py
config/: default.yml  feature_flags.py  thresholds.py
core/: __init__.py  data_quality_guard.py  evidence_schema_v1.py  ledger.py  ledger_analyzer_v1.py  result.py  scoring.py
dash/: control_tower.html
docs/: F1_LOCAL_WORKFLOW.md  SPRINT_NEXT.md
exports/: meta_buildsheet.csv  promoted_object_purchase.json  sample_results.csv  secrets_template.env  targeting_mx_broad.json  wave_kit_demo_00000.sha256  wave_kit_demo_00001.sha256  wave_kit_demo_00002.sha256  wave_kit_demo_00003.sha256  wave_kit_demo_00004.sha256  wave_kit_demo_00005.sha256  wave_kit_demo_00006.sha256  wave_kit_demo_00007.sha256  wave_kit_demo_00008.sha256  wave_kit_demo_00009.sha256  wave_kit_demo_00010.sha256  wave_kit_demo_00011.sha256  wave_kit_demo_00012.sha256  wave_kit_demo_00014.sha256  wave_kit_demo_00015.sha256  wave_kit_demo_00016.sha256  wave_kit_demo_00017.sha256  wave_kit_demo_00019.sha256  wave_kit_seed.sha256  (+2 more)
(+695 files in other folders)
